--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "multer": "^1.4.2",
+    "node-id3": "^0.1.13",
     "sharp": "^0.24.0",
     "validator": "^12.2.0"
   },
