--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "browser-id3-writer": "^4.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ffmetadata": "^1.6.0",
+    "id3-writer": "^1.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
+    "mongoose-fuzzy-searching": "^1.3.1",
     "multer": "^1.4.2",
+    "music-metadata": "^6.4.0",
     "node-id3": "^0.1.13",
     "sharp": "^0.24.1",
     "validator": "^12.2.0"
