--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "browser-id3-writer": "^4.4.0",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ffmetadata": "^1.6.0",
+    "gridfs-stream": "^1.1.1",
     "id3-writer": "^1.3.0",
     "jsonwebtoken": "^8.5.1",
+    "method-override": "^3.0.0",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.9",
     "mongoose-fuzzy-searching": "^1.3.1",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.1.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "music-metadata": "^6.4.0",
     "node-id3": "^0.1.13",
     "sharp": "^0.24.1",
