--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ffmetadata": "^1.6.0",
+    "googleapis": "^52.1.0",
     "gridfs-stream": "^1.1.1",
     "id3-writer": "^1.3.0",
     "jsonwebtoken": "^8.5.1",
@@ -30,6 +31,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "music-metadata": "^6.4.0",
     "node-id3": "^0.1.13",
+    "nodemailer": "^6.4.10",
     "sharp": "^0.24.1",
     "validator": "^12.2.0"
   },
