--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "music-metadata": "^6.4.0",
     "node-id3": "^0.1.13",
     "nodemailer": "^6.4.10",
+    "notp": "^2.0.3",
     "sharp": "^0.24.1",
     "validator": "^12.2.0"
   },
